MM-49869 -  add channel button sidebar

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4861,6 +4861,7 @@
   "sidebar_left.add_channel_dropdown.invitePeopleExtraText": "Add people to the team",
   "sidebar_left.add_channel_dropdown.work_template": "Create from a template",
   "sidebar_left.add_channel_dropdown.work_template_extra": "Set up a channel with linked boards, and playbooks",
+  "sidebar_left.addChannelsCta": "Add channels",
   "sidebar_left.channel_filter.filterByUnread": "Filter by unread",
   "sidebar_left.channel_filter.filterUnreadAria": "unreads filter",
   "sidebar_left.channel_filter.showAllChannels": "Show all channels",
@@ -4899,6 +4900,7 @@
   "sidebar_left.sidebar_channel_menu.unfavoriteChannel": "Unfavorite",
   "sidebar_left.sidebar_channel_menu.unmuteChannel": "Unmute Channel",
   "sidebar_left.sidebar_channel_menu.unmuteConversation": "Unmute Conversation",
+  "sidebar_left.sidebar_channel_navigator.addChannelsCta": "Add channels",
   "sidebar_left.sidebar_channel_navigator.inviteUsers": "Invite Users",
   "sidebar_left.sidebar_channel.selectedCount": "{count} selected",
   "sidebar_right_menu.console": "System Console",
